# experiment-services

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  celery_config.py  config.py  docker-compose.yml  experiment-service.db  log.py  main.py  middleware.py  pyproject.toml  test.db
api/: depends.py  events_routes.py  experiment_routes.py
auth/: security.py
celery_tasks/: event_tasks.py
data/: database.py
models/: events.py  experiments.py  results.py
services/: assignment.py  assignment_test.py  cache.py  results.py
tests/: conftest.py  experiments_test.py
